syntax = "proto3";

package restaurant.v1;

import "api/v1/api.proto";
import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Restaurants";
    version: "1.0";
  };
  schemes: HTTPS;
  consumes: "application/json";
  produces: "application/json";
  responses: {
    key: "default";
    value: {
      description: "Error";
      schema: {
        json_schema: {ref: ".api.v1.ErrorResponse"}
      }
    }
  }
};

service RestaurantService {
  rpc CreateRestaurant(CreateRestaurantRequest) returns (CreateRestaurantResponse) {
    option (google.api.http) = {
      post: "/api/v1/restaurants"
      body: "*"
      response_body: "restaurant"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Create a restaurant"
      description: "Creates a new restaurant in the system."
      tags: "Restaurants"
    };
  }
}

message CreateRestaurantRequest {
  string name = 1 [
    (buf.validate.field).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];
  repeated Schedule schedule = 2 [(buf.validate.field).repeated.min_items = 1];
}

message CreateRestaurantResponse {
  Restaurant restaurant = 1;
}

message Restaurant {
  string id = 1 [(google.api.field_behavior) = OUTPUT_ONLY];
  string name = 2;
  repeated Schedule schedule = 5 [(buf.validate.field).repeated.min_items = 1];
  google.protobuf.Timestamp created_at = 3 [(google.api.field_behavior) = OUTPUT_ONLY];
  google.protobuf.Timestamp updated_at = 4 [(google.api.field_behavior) = OUTPUT_ONLY];
}

message Schedule {
  api.v1.Day day = 1 [(buf.validate.field).enum.defined_only = true];
  api.v1.Time start_time = 2;
  api.v1.Time end_time = 3;
}
